name:                bondpricer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bondpricer#readme
license:             BSD3
license-file:        LICENSE
author:              Marco Pistilli
maintainer:          pistilli.mrc@gmail.com
copyright:           2023 Marco Pistilli
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable bondpricer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , time  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
