cabal-version: 3.6

name: bondpricer
version: 0.1.0.0

common common
  build-depends:
      base >= 4.14,
      text >= 1.2,
      time >= 1.11
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src/**
  exposed-modules: BondPricer
  build-depends:
      scotty >= 0.12

executable bondpricer
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      bondpricer